--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "axios": "^0.18.0",
-    "element-ui": "^2.4.11"
+    "element-ui": "^2.4.11",
+    "countup.js": "^1.9.3",
+    "vue-countup-v2": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
