--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-image": "vue-cli-service build  &&  docker build -t nginx-metro-portal ./docker",
+    "build-image": "vue-cli-service build  &&  docker build -t 192.168.93.172/oa-bdps/metro-portal-web:latest ./docker",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
